# maglass

./: .gitignore  CMakeLists.txt  README.md  install.sh
.cache/clangd/index/: appstate.h.99237DF878C11C69.idx  handle_input.c.20766015D1EEC7BE.idx  handle_input.h.8DA282D7E5A72B0B.idx  main.c.3E0CC57B8D2B88AD.idx
assets/shaders/: spotlight.fs
include/maglass/: handle_input.h  panning.h  spotlight.h  zoom.h
include/maglass/utils/: clamp.h
src/: clamp.c  handle_input.c  main.c  panning.c  spotlight.c  zoom.c
